Struttura section 1 main

--- a/index.html
+++ b/index.html
@@ -95,6 +95,53 @@
         <!-- Inizio main -->
         <main>
 
+            <section>
+
+                <div class="container-small">
+
+                    <div class="business">
+                        Trova il piano business che fa per te
+                    </div>
+
+                    <div>
+                        <span><input type="radio">Fatturazione mensile</span>
+                        <span><input type="radio">Fatturazione annuale</span>
+                    </div>
+
+                    <div class="flex">
+                        <div class="col-1">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, ad maxime porro possimus at nam doloremque voluptatum asperiores velit nesciunt illum ipsam vitae tempora error perspiciatis perferendis ducimus et minima?
+                            Eos ab optio accusamus alias provident dolorem dolore porro sapiente laudantium, deleniti explicabo minima saepe ratione eaque, at molestias impedit sunt amet! Quidem, tempore repudiandae tenetur voluptate magni aut! Quasi?
+                            Aut voluptatem quaerat ea quibusdam. Reprehenderit, quae qui aliquam natus exercitationem adipisci asperiores facere ducimus ipsum! Voluptate a voluptatibus voluptates quo necessitatibus obcaecati sequi maiores expedita maxime. Sint, recusandae eum?
+                            Sapiente dolorum porro fuga beatae, veritatis atque totam tempore laboriosam officiis odio voluptas cupiditate a blanditiis rem reiciendis veniam cum saepe. Mollitia amet distinctio minus totam placeat quae asperiores dolore!
+                            Ex doloribus illum quo sit velit perspiciatis magnam aliquam, odio ut repellat adipisci et rerum quia blanditiis quasi illo placeat fugit corporis voluptatibus cum! Odio magni error aliquam voluptatem quia.
+
+                        </div>
+
+                        <div class="col-2">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam facere atque soluta, voluptates numquam dolores fugiat, enim inventore necessitatibus in harum, nobis quae? Unde, consectetur cupiditate. Aspernatur facere at ad!
+                            Animi, iste quia eveniet delectus quod nihil possimus eum nobis eos ex, odit laboriosam soluta, fugiat omnis maiores sunt cum beatae commodi ut fugit iure. At consequuntur reprehenderit aliquid pariatur.
+                            Ut enim, odio accusantium iure non amet minima perferendis exercitationem culpa omnis. Qui ducimus nihil natus labore, assumenda dolor laboriosam autem accusamus modi earum exercitationem et doloribus eligendi aliquam doloremque.
+                            Aliquid in expedita aspernatur id magnam. Magnam voluptate iusto et asperiores dicta excepturi nesciunt explicabo praesentium, veritatis, dolorem eum quo id, libero accusantium dolor dignissimos beatae repellat consequatur consectetur dolorum.
+                            Voluptatum id ullam, cupiditate quod quasi expedita vel fugiat dicta magnam quaerat distinctio harum porro delectus mollitia veritatis placeat. Voluptatibus, cumque soluta quis placeat laborum maxime. Suscipit cupiditate vitae eius?
+
+                        </div>
+
+                        <div class="col-3">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat vero deserunt aliquam, ipsum tenetur facilis, consectetur facere temporibus sapiente tempore eaque impedit sed dolores totam, obcaecati repellendus iste ut maxime.
+                            Suscipit facilis magnam amet vitae nam deserunt neque ex? Corrupti consequuntur sit perspiciatis velit quasi in numquam qui dolore vel! Culpa excepturi commodi architecto facere mollitia ad dolore voluptate praesentium.
+                            Illum rerum minima corrupti placeat perferendis quia accusamus fugiat autem sequi nesciunt! Aliquam cupiditate minus voluptas aspernatur, ipsa facilis dicta iste eligendi dolorum, recusandae corrupti minima rerum consequatur maiores. Iste?
+                            Adipisci, earum atque velit in quidem voluptates vel deserunt sit minus! Libero dolor odio temporibus vel nihil perferendis veniam, necessitatibus pariatur provident laboriosam optio numquam ea eum doloremque nulla? Repellendus?
+                            Molestiae sunt, nemo rem error earum voluptatem voluptatibus repudiandae libero sapiente iusto eius exercitationem quia accusantium quidem quasi laudantium odit voluptates possimus! Delectus aspernatur atque at
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </main>
         
 
