--- a/index.html
+++ b/index.html
@@ -527,7 +527,68 @@
             </section>
             <!-- Fine Section 5 -->
 
-            
+            <!-- Inizio Section 6 -->
+            <section class="company">
+
+                <div class="row">
+
+                    <div class="big">
+
+                        <h2>Porta Dropbox Business nella tua azienda</h2>
+
+                    </div>
+
+                    <div class="small">
+
+                        <button class="white-1">Inizia la tua prova gratuita</button>
+
+                    </div>
+
+                </div>
+
+            </section>
+            <!-- Fine Section 6 -->
+
+            <!-- Inizio Section 7 -->
+            <section>
+
+                <h2>Domande frequenti</h2>
+
+                <hr class="hr-questions">
+
+                <div class="questions">
+
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <span class="chevron"><i class="fa-solid fa-chevron-down"></i></span>
+
+                </div>
+
+                <hr class="hr-questions">
+
+                <div class="questions">
+
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <span class="chevron"><i class="fa-solid fa-chevron-down"></i></span>
+
+                </div>
+
+                <hr class="hr-questions">
+
+                <div class="questions">
+
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <span class="chevron"><i class="fa-solid fa-chevron-down"></i></span>
+
+                </div>
+
+            </section>
+            <!-- Fine Section 7 -->
+
+
+
+
+
+
 
 
 
