Aggiunto contenuto section 5

--- a/index.html
+++ b/index.html
@@ -480,44 +480,51 @@
 
                     <div class="single-container">
 
-                        <div>
-
+                        <div id="img-1">
+                            <img src="img/designit.svg" alt="">
+                        </div>
+                            
+                        <div id="img-2">
+                            <img src="img/arizona_state_university.svg" alt="">
                         </div>
 
-                        <div>
-
+                        <div id="img-3">
+                            <img src="img/university_of_florida.svg" alt="">
                         </div>
 
-                        <div>
-
-                        </div>
-
-                        <div>
-
+                        <div id="img-4">
+                            <img src="img/topps.svg" alt="">
                         </div>
 
                     </div>
 
                     <div class="single-container">
 
+                        <img src="img/designit.svg" alt="">
+
+                        <p>"I membri del nostro team lavorano costantemente in Paesi, orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze ma nessuna è facile quanto Dropbox e Dropbox Paper."</p>
+
                     </div>
+
+
+
 
                     <div class="single-container">
 
-                        <div>
-
+                        <div id="img-5" >
+                            <img src="img/world_bicycle_relief.svg" alt="">
                         </div>
 
-                        <div>
-
+                        <div id="img-6">
+                            <img src="img/hearst_corp.svg" alt="">
                         </div>
 
-                        <div>
-
+                        <div id="img-7">
+                            <img src="img/lonely_planet.svg" alt="">
                         </div>
 
-                        <div>
-
+                        <div id="img-8">
+                            <img src="img/clear_channel.svg" alt="">
                         </div>
 
                     </div>
@@ -526,6 +533,9 @@
 
             </section>
             <!-- Fine Section 5 -->
+
+
+
 
             <!-- Inizio Section 6 -->
             <section class="company">
@@ -583,6 +593,11 @@
 
             </section>
             <!-- Fine Section 7 -->
+
+
+            <footer>
+
+            </footer>
 
 
 
